--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,386 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miami</title>
+    <title>MyBike</title>
+    <link
+      rel="shortcut icon"
+      href="./images/favicon.png"
+      type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Miami</h1>
+  <body class="page__body page">
+    <header class=" page__section header" >
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <a href="#" class="logo">
+              <img class="logo__image"
+                src="./images/svg/MyBiKE.svg"
+                alt="MyBike">
+            </a>
+
+            <a class="icon icon--phone"
+              href="tel:+1 234 555-55-55"
+            >
+              <div class="icon__tooltip">
+                +1 234 555-55-55
+              </div>
+            </a>
+
+            <a href="#menu" class=" icon icon--menu"></a>
+          </div>
+          <h1 class="header__title">Take the Streets</h1>
+        </div>
+      </div>
+    </header>
+    <nav class=" page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="logo">
+              <img class="logo__image menu__image"
+                src="./images/svg/MyBiKE-black.svg"
+                alt="MyBike">
+            </a>
+
+            <a href="#" class=" icon icon--cross"></a>
+          </div>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#Home" class="menu__link">Home</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#about-us" class="menu__link">About Us</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#compare-bikes" class="menu__link">Compare Bikes</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#details" class="menu__link">Details</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Contacts</a>
+            </li>
+          </ul>
+          <a
+            href="tel:+1 234 5555-55-55 "
+            class="menu__call menu__call--phone">
+              +1 234 5555-55-55
+          </a>
+
+          <a
+            href="tel:+1 234 5555-55-55 "
+            class="menu__call menu__call--action">
+              Book a test ride
+          </a>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <section class="page__section about"
+        id="about-us">
+        <div class="container">
+          <div class="grid grid--tablet-desktop">
+            <div class="grid__item
+              grid__item--tablet-1-3
+              grid__item--desktop-1-5">
+              <h2 class="about__title">Move Free</h2>
+            </div>
+            <div class="grid__item
+              grid__item--tablet-4-6
+              grid__item--desktop-6-11">
+              <p class="about__paragraph">
+                Shift your ride, not gears. Find the fastest way to move in the city as the bike adapts intuitively to power the speed you need.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section compare-bikes" id="compare-bikes">
+        <div class="container">
+          <h2 class="page__section-title">Compare bikes</h2>
+          <div class="grid grid--tablet-desktop">
+            <div class="compare-bikes__item
+              grid__item
+              grid__item--tablet-2-5
+              grid__item--desktop-1-4">
+              <div class="bike">
+                <div class="bike__photo-container">
+                  <img class="bike__photo"
+                    src="./images/bike_1.png"
+                    alt=" Bike: Sporty 4">
+                </div>
+                <h3 class="bike__title">Sporty 4</h3>
+                <p class="bike__about">
+                  The iconic frame brought to a new performance height as a sporty, active ride.
+                </p>
+                <div class="bike__price">
+                  $ 2 590
+                </div>
+              </div>
+            </div>
+
+            <div class=" compare-bikes__item
+              grid__item
+              grid__item--tablet-2-5
+              grid__item--desktop-5-8">
+              <div class="bike">
+                <div class="bike__photo-container">
+                  <img class="bike__photo"
+                    src="./images/bike_2.png"
+                    alt=" Bike: Ride in town ST">
+                </div>
+                <h3 class="bike__title">Ride in town ST</h3>
+                <p class="bike__about">
+                  An open frame for an upright riding position as the most comfortable ride in town.
+                </p>
+                <div class="bike__price">
+                  $ 2 590
+                </div>
+              </div>
+            </div>
+
+            <div class="compare-bikes__item
+              grid__item
+              grid__item--tablet-2-5
+              grid__item--desktop-9-12">
+              <div class="bike">
+                <div class="bike__photo-container">
+                  <img class="bike__photo"
+                    src="./images/bike_3.png"
+                    alt=" Bike: Agile ride 3">
+                </div>
+                <h3 class="bike__title">Agile ride 3</h3>
+                <p class="bike__about">
+                  The lightweight frame that has earned its street tread as a sleek, agile ride.
+                </p>
+                <div class="bike__price">
+                  $ 2 090
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section details"
+        id="details">
+        <div class="container">
+          <h2 class="page__section-title">The details</h2>
+          <div class="details__place place">
+            <div class="place__photos">
+              <div class="grid">
+                <div class="grid__item
+                  grid__item--tablet-1-4
+                  grid__item--desktop-1-8">
+                  <div class="place__photo-container">
+                    <img
+                    src="./images/details_1.png"
+                    alt="place 1"
+                    class="place__photo">
+                  </div>
+
+                </div>
+                <div class="grid__item
+                  grid__item--tablet-5-6
+                  grid__item--desktop-9-12">
+                  <div class="place__photo-container">
+                    <img
+                      src="./images/details_2.png"
+                      alt="place 2"
+                      class="place__photo">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="place__description">
+              <h3 class="place__title">
+                Auto Unlock
+              </h3>
+              <p class="place__text">
+                The app senses when you're nearby to unlock automatically. GPS tracking so you know where your bike is and can track it anytime.
+              </p>
+            </div>
+          </div>
+
+          <div class="details__place place">
+            <div class="place__photos">
+              <div class="grid">
+                <div class="grid__item
+                  grid__item--tablet-1-4
+                  grid__item--desktop-1-8">
+                  <div class="place__photo-container">
+                    <img
+                    src="./images/details_3.png"
+                    alt="place 3"
+                    class="place__photo">
+                  </div>
+
+                </div>
+                <div class="grid__item
+                  grid__item--tablet-5-6
+                  grid__item--desktop-9-12">
+                  <div class="place__photo-container">
+                    <img
+                      src="./images/details_4.png"
+                      alt="place 4"
+                      class="place__photo">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="place__description">
+              <h3 class="place__title">
+                Range & Integrated lights
+              </h3>
+              <p class="place__text">
+                The removable battery has up to 70km battery autonomy and weighs only 2.4 kg. Lights integrated into the frame give you always-on visibility day and night.
+              </p>
+            </div>
+          </div>
+
+          <div class="details__place place">
+            <div class="place__photos">
+              <div class="grid">
+                <div class="grid__item
+                  grid__item--tablet-1-2
+                  grid__item--desktop-1-4">
+                  <div class="place__photo-container">
+                    <img
+                    src="./images/details_5.png"
+                    alt="place 5"
+                    class="place__photo">
+                  </div>
+
+                </div>
+                <div class="grid__item
+                  grid__item--tablet-3-6
+                  grid__item--desktop-5-12">
+                  <div class="place__photo-container">
+                    <img
+                      src="./images/details_6.png"
+                      alt="place 6"
+                      class="place__photo">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="place__description">
+              <h3 class="place__title">
+                Hydraulic disc brakes & Lightweight
+              </h3>
+              <p class="place__text">
+                Brakes with total stopping power the second you make contact. The removable battery has up to 70km battery autonomy and weighs only 2.4 kg. Lights integrated into the frame give you always-on visibility day and night.
+              </p>
+            </div>
+          </div>
+          <div class="grid grid--tablet-desktop">
+            <div class="grid__item
+              grid__item--tablet-2-5
+              grid__item--desktop-5-8">
+              <a href="#" class="button">Explore</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section contacts"
+        id="contacts">
+        <div class="container">
+          <h2 class="page__section-title">Contact us</h2>
+          <div class="grid grid--tablet-desktop">
+            <div class="grid__item
+              grid__item--tablet-1-3
+              grid__item--desktop-1-5">
+              <form action="#" id="form">
+                <input
+                  class="form-field contacts__field"
+                  name="name"
+                  type="text"
+                  placeholder="Name"
+                  required
+                >
+
+                <input
+                  class="form-field contacts__field"
+                  name="email"
+                  type="email"
+                  placeholder="Email"
+                  required
+                >
+                <textarea
+                  class="
+                    contacts__field--last
+                    form-field
+                    form-field--textarea
+                    contacts__field"
+                  name="message"
+                  placeholder="Message"
+                  required
+                ></textarea>
+                <button
+                  type="submit"
+                  class="button button--primary">
+                  Send
+                </button>
+              </form>
+            </div>
+            <div class="grid__item
+              grid__item--tablet-4-6
+              grid__item--desktop-8-10">
+              <div class="contacts__info">
+                <div class="contacts__info-title">
+                  Phone
+                </div>
+                <a
+                  href="tel:+1 234 5555-55-55"         class="contacts__info-link"
+                >
+                  +1 234 5555-55-55
+                </a>
+              </div>
+
+              <div class="contacts__info">
+                <div class="contacts__info-title">
+                  Email
+                </div>
+                <a
+                  href="mailto:hello@miami.com"
+                  class="contacts__info-link"
+                >
+                hello@miami.com
+                </a>
+              </div>
+
+              <div class="contacts__info">
+                <div class="contacts__info-title">
+                  Address
+                </div>
+                <a target="_blank"
+                  href="https://goo.gl/maps/2QDMuATAYH6QnACA7"
+                  class="contacts__info-link"
+                >
+                400 first ave. <br>
+                suite 700 <br>
+                Minneapolis, MN 55401
+                </a>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer"></footer>
   </body>
 </html>
